[tool.poetry]
name = "py-client"
version = "0.1.0"
description = ""
authors = ["GicheruBenjamin <benjaminnjuguna77@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
httpx = "^0.28.1"
load-dotenv = "^0.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
